--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^18.7.23",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
     "eslint": "^8.24.0",
@@ -21,6 +25,7 @@
     "brace-expansion": "^1.1.11",
     "commander": "^4.1.1",
     "concat-map": "^0.0.1",
+    "dotenv": "^16.0.2",
     "fs.realpath": "^1.0.0",
     "glob": "^7.1.6",
     "inflight": "^1.0.6",
