--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "brace-expansion": "^1.1.11",
     "commander": "^4.1.1",
     "concat-map": "^0.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "express": "^4.18.1",
     "fs.realpath": "^1.0.0",
     "glob": "^7.1.6",
     "inflight": "^1.0.6",
     "inherits": "^2.0.4",
     "lines-and-columns": "^1.2.4",
     "minimatch": "^3.1.2",
+    "mongoose": "^6.6.2",
     "mz": "^2.7.0",
     "object-assign": "^4.1.1",
     "once": "^1.4.0",
