--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "@types/mongodb": "^4.0.7",
     "any-promise": "^1.3.0",
     "balanced-match": "^1.0.2",
     "brace-expansion": "^1.1.11",
